--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17337,13 +17337,15 @@ th.team-leader__goals, td.team-leader__goals {
     font-family: "Montserrat", sans-serif;
     font-size: 9px;
     line-height: 1.2em;
+    text-decoration: underline;
     color: white;
     vertical-align: top;
     -webkit-transition: color 0.25s cubic-bezier(0.3, 0.1, 0.55, 1);
     transition: color 0.25s cubic-bezier(0.3, 0.1, 0.55, 1);
 }
 .info-block__link:hover {
-    color: #fff;
+    color: #38a9ff;
+    text-decoration: underline;
 }
 .info-block__link-wrapper {
     display: block;
