--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -121,24 +121,39 @@ Description:  Styles for displaying content with some of the most commonly used 
 // --------------------------------------------------
 */
 
-.active-white > a{
-color : #fff !important;
+.active-white>a {
+    color: #fff !important;
 }
+
+
 /* Headings */
-.post__items__custom{
-    cursor:pointer;margin: 0  !important;padding-left: 0 !important;padding-right: 0 !important;
+
+.post__items__custom {
+    cursor: pointer;
+    margin: 0 !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
 }
-.post__items__custom__selected{
-    background-color:rgba(128, 128, 128, 0.4);
-}.post__items__custom__img__selected{
-    width: 130px; height: 80px;filter: brightness(0.8);
+
+.post__items__custom__selected {
+    background-color: rgba(128, 128, 128, 0.4);
 }
-.post__items__custom__img{
-    width: 130px; height: 80px;
+
+.post__items__custom__img__selected {
+    width: 130px;
+    height: 80px;
+    filter: brightness(0.8);
 }
+
+.post__items__custom__img {
+    width: 130px;
+    height: 80px;
+}
+
 .bootstrap-datetimepicker-widget.dropdown-menu {
     z-index: 9999 !important;
 }
+
 .ul_tincazos {
     display: flex;
     margin: 0;
