--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1229,10 +1229,10 @@ input.header-mobile__search-control {
 }
 
 .img-thumbnail-success {
-    padding: .10rem;
+    padding: 0;
     background-color: #25853c;
-    border: 1px solid #25853c;
-    border-radius: .25rem;
+    border: none;
+    border-radius: .0;
     max-width: 100%;
     height: auto;
 }
@@ -1245,20 +1245,24 @@ input.header-mobile__search-control {
     background-color: #007bff !important;
 }
 .img-thumbnail-primary {
-    padding: .10rem;
+    padding: .1rem;
     background-color: #007bff;
-    border: 1px solid #007bff;
-    border-radius: .25rem;
+    border: 0px solid #007bff;
+    border-radius: 0;
     max-width: 100%;
     height: auto;
 }
 .tournament__select{
     background-color :#80808045;
-    border-radius: 5%;
+    border-top-right-radius: 2%;
+    border-radius: 2%;
+    border: 1px solid rgba(255, 255, 255, 0.5)
 }
 .group__select{
     background-color :#80808045;
-    border-radius: 5%;
+    border-top-right-radius: 2%;
+    border-bottom-right-radius: 2%;
+    border: 1px solid rgba(255, 255, 255, 0.5)
 }
 .lds-spinner-middle {
     position: absolute !important;
