--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1484,14 +1484,7 @@ input.header-mobile__search-control {
       max-width: 95%;
     }
   }
-
-  .modal-dialog {
-    position: relative;
-    width: 100%;
-    margin: .5rem;
-    pointer-events: none;
-}
-
+  
 .game-result__team-logo-img{
     height: 70px;
 }
@@ -1499,4 +1492,10 @@ input.header-mobile__search-control {
     .game-result__team-logo-img{
         height: auto;
     }
+    .game-result__score-wrap {
+        margin: 0 0 0px 0;
+        text-align: right;
+    }
 }
+
+
