--- a/public/assets/css/style-soccer.css
+++ b/public/assets/css/style-soccer.css
@@ -27,14 +27,14 @@ body {
 }
 
 #jprePercentage::before {
-  content: "Loading...";
+  content: "Cargando...";
   color: #fff;
 }
 
 #jprePercentage::after {
-  content: "Alchemists Template";
+  content: "TINCAZO";
   display: block;
-  font-size: 8px;
+  font-size: 10px;
   line-height: 1.5em;
   color: #fff;
   letter-spacing: 0;
