--- a/public/assets/css/style-soccer.css
+++ b/public/assets/css/style-soccer.css
@@ -32,7 +32,7 @@ body {
 }
 
 #jprePercentage::after {
-  content: "TINCAZO";
+  content: "www.tincazo.com";
   display: block;
   font-size: 10px;
   line-height: 1.5em;
