--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -252,7 +252,7 @@ padding-left: 0px !important;
 }
 
 .category-filter__link {
-    padding: 7px 7px !important;
+    padding: 0 12px !important;
 }
 
 .nav-tabs {
